# Voice-Agent

./: main.py  requirements.txt
__MACOSX/line_agent/nodes/: ._controller.py
line_agent/: app.py  config.py
line_agent/guardrails/: enforcer.py  policy.yaml
line_agent/nodes/: __init__.py  boogeyman_node.py  boogeyman_scripts.py  controller.py  events.py
line_agent_production/: .gitignore  README.md  pyproject.toml
line_agent_production/line_agent/: __init__.py  app.py  auth.py
line_agent_production/line_agent/guardrails/: __init__.py
line_agent_production/line_agent/integrations/: cartesia_tts.py
line_agent_production/line_agent/nodes/: boogeyman_node.py  controller.py
line_agent_production/line_agent/prompts/: __init__.py  content_rules.md  parent_guide.md  system_boogeyman.md
